--- a/src/pages/participant/participant.html
+++ b/src/pages/participant/participant.html
@@ -72,16 +72,16 @@
 
         <ion-col width-100>
             <h2>Equipe <b>{{ teamData.name }}</b>
-                <ion-icon name="trophy" *ngIf="teamData.status == 'Vainqueur'"></ion-icon>
+                <ion-icon name="trophy" class="color-star" *ngIf="teamData.status == 'Vainqueur'"></ion-icon>
             </h2>
         </ion-col>
         <ion-card>
-            <ion-card-content>
+            <ion-card-content no-padding>
 
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
-                        <ion-col width-33 *ngFor="let participant of teamData.participants">
-                            <span class="items">{{ participant.firstname }}</span>
+                        <ion-col width-33 *ngFor="let member of teamData.members">
+                            <span class="items">{{ member.firstname }}</span>
                         </ion-col>
                     </ion-row>
                 </ion-grid>
