--- a/src/pages/participant/participant.html
+++ b/src/pages/participant/participant.html
@@ -6,36 +6,36 @@
 -->
 <ion-header>
     <ion-navbar>
-
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-
+        <!-- Display the last name and first name -->
         <ion-title>
             {{ participantData.lastname }} {{ participantData.firstname }}
         </ion-title>
-
     </ion-navbar>
 </ion-header>
 
-
 <ion-content>
-
+    <!-- Display the detail for the tournament's participant -->
     <div *ngFor="let tournament of participantData.tournament">
-
+        <!-- Display the tournament name -->
         <ion-col width-100><h2>Participe à <b>{{ tournament.name }}</b></h2></ion-col>
+        <!-- Display different content if the tournament is not "Marche"-->
         <ion-col *ngIf="tournament.sport != 'Marche'" width-100 no-padding>
             <div style="font-weight: 100; margin-left:11px;">Cliquez pour plus de détails</div>
         </ion-col>
+        <!-- When we click on the tournament -> go to detail tournament -->
         <ion-card *ngIf="tournament.sport != 'Marche'" (click)="goToTournament(tournament)">
             <ion-card-content no-padding>
-
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
+                        <!-- Display the logo for the sport and the name of the sport -->
                         <ion-col width-50>
                             <ion-img src="assets/sports/{{ setIconSports(tournament.sport) }}" width="35" height="35" class="sports-img"></ion-img>
                             <div class="items sports-label">{{ tournament.sport }}</div>
                         </ion-col>
+                        <!-- Display the name of the place -->
                         <ion-col width-50>
                             <ion-icon name="pin" class="info"></ion-icon>
                             <br/>
@@ -43,18 +43,19 @@
                         </ion-col>
                     </ion-row>
                 </ion-grid>
-
             </ion-card-content>
         </ion-card>
+        <!-- Display different content if the sport is "Marche"-->
         <ion-card *ngIf="tournament.sport == 'Marche'">
             <ion-card-content no-padding>
-
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
+                        <!-- Display the logo for the sport and the name of the sport -->
                         <ion-col width-50>
                             <ion-img src="assets/sports/{{ setIconSports(tournament.sport) }}" width="35" height="35" class="sports-img"></ion-img>
                             <div class="items sports-label">{{ tournament.sport }}</div>
                         </ion-col>
+                        <!-- Display the name of the place -->
                         <ion-col width-50>
                             <ion-icon name="pin" class="info"></ion-icon>
                             <br/>
@@ -62,22 +63,20 @@
                         </ion-col>
                     </ion-row>
                 </ion-grid>
-
             </ion-card-content>
         </ion-card>
-
     </div>
-
+    <!-- Display the detail for the team's participant -->
     <div *ngFor="let team of participantData.team">
-
+        <!-- Display the name of team and display a icon trophy if the team have a status "Vainqueur" -->
         <ion-col width-100>
             <h2>Equipe <b>{{ teamData.name }}</b>
                 <ion-icon name="trophy" *ngIf="teamData.status == 'Vainqueur'"></ion-icon>
             </h2>
         </ion-col>
+        <!-- Display the name of participants -->
         <ion-card>
             <ion-card-content>
-
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
                         <ion-col width-33 *ngFor="let participant of teamData.participants">
@@ -85,21 +84,19 @@
                         </ion-col>
                     </ion-row>
                 </ion-grid>
-
             </ion-card-content>
         </ion-card>
-
+        <!-- Display the name of tournament -->
         <ion-col width-100 class="no-padding-bottom"><h2>Liste des <b>Matchs</b></h2></ion-col>
         <ion-col width-100 no-padding>
             <div style="font-weight: 100; margin-left:11px;">Cliquez pour plus de détails</div>
         </ion-col>
-
         <ion-card>
             <ion-card-content no-padding>
                 <ion-list >
+                    <!-- When we click on the name of the match -> go to detail pool -->
                     <ion-item *ngFor="let match of teamData.matches" (click)="goToPool(match.group_match_id)">
-
-                        <!-- WIN -->
+                        <!-- Display a border green if the team win and display the score -->
                         <ion-row class="border-win" *ngIf="match.ownScore > match.team2Score">
                             <ion-col width-33 class="items">
                                 {{ teamData.name }}
@@ -113,10 +110,7 @@
                                 {{ match.team2 }}
                             </ion-col>
                         </ion-row>
-                        <!-- END - WIN -->
-
-
-                        <!-- LOSE -->
+                        <!-- Display a border red if the team lose and display the score -->
                         <ion-row class="border-lose" *ngIf="match.ownScore < match.team2Score">
                             <ion-col width-33 class="items">
                                 {{ teamData.name }}
@@ -130,10 +124,7 @@
                                 {{ match.team2 }}
                             </ion-col>
                         </ion-row>
-                        <!-- END - LOSE -->
-
-
-                        <!-- DRAW -->
+                        <!-- Display a border orange if teams have tied and display the score -->
                         <ion-row class="border-draw" *ngIf="(match.team1Score == match.team2Score) && (match.start == '')">
                             <ion-col width-33 class="items">
                                 {{ teamData.name }}
@@ -147,9 +138,7 @@
                                 {{ match.team2 }}
                             </ion-col>
                         </ion-row>
-                        <!-- END - DRAW -->
-
-                        <!-- INC -->
+                        <!-- Display a border grey if the match didn't begin -->
                         <ion-row class="border-inc" *ngIf="match.status == 'A venir' ">
                             <ion-col width-33 class="items">
                                 {{ teamData.name }}
@@ -163,13 +152,9 @@
                                 {{ match.team2 }}
                             </ion-col>
                         </ion-row>
-                        <!-- END - INC -->
-
                     </ion-item>
                 </ion-list>
             </ion-card-content>
         </ion-card>
-
     </div>
-
 </ion-content>
