--- a/src/pages/pool/pool.html
+++ b/src/pages/pool/pool.html
@@ -86,6 +86,7 @@
                             {{ team.name }}
                         </ion-col>
                     </ion-row>
+                </ion-item>
                 <!-- Display nothing if no matches are finished -->
                 <ion-item *ngIf="!finish">
                     <ion-row class="results" >
