--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -14,16 +14,16 @@
     <!-- Display the toolbar -->
     <ion-toolbar no-border-top>
         <ion-segment [(ngModel)]="eventContent">
-            <ion-segment-button value="teams">
+            <ion-segment-button value="teams" (click)="setSegment('teams')">
                 Équipes
             </ion-segment-button>
-            <ion-segment-button value="tournaments">
+            <ion-segment-button value="tournaments" (click)="setSegment('tournaments')">
                 Tournois
             </ion-segment-button>
-            <ion-segment-button value="participants">
+            <ion-segment-button value="participants" (click)="setSegment('participants')">
                 Participants
             </ion-segment-button>
-            <ion-segment-button value="results">
+            <ion-segment-button value="results" (click)="setSegment('results')">
                 Résultats
             </ion-segment-button>
         </ion-segment>
@@ -31,6 +31,10 @@
 </ion-header>
 
 <ion-content>
+    <ion-refresher (ionRefresh)="refresh($event)">
+        <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
+    </ion-refresher>
+
     <!-- Display the content according to the toolbar -->
     <div [ngSwitch]="eventContent">
         <ion-list *ngSwitchCase="'teams'">
