--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -16,6 +16,11 @@
 </ion-header>
 
 <ion-content>
+
+    <ion-refresher (ionRefresh)="refresh($event)">
+        <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
+    </ion-refresher>
+
     <ion-list>
         <!-- When we click on the name of the event -> go to detail event -->
         <button ion-item *ngFor="let event of filteredEvents" (click)="goToEvent(event)">
