--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -17,6 +17,10 @@
 </ion-header>
 
 <ion-content>
+    <ion-refresher (ionRefresh)="refresh($event)">
+        <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
+    </ion-refresher>
+
     <!-- Display the type and the place of tournament -->
     <ion-grid text-center class="white-background">
         <ion-row style="flex-wrap: wrap;">
