--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -67,7 +67,7 @@
                                 {{ teamData.name }}
                             </ion-col>
 
-                            <ion-col text-center>
+                            <ion-col text-center class="score">
                                 <ion-note class="items">{{ match.ownScore }} - {{ match.team2Score }}</ion-note>
                             </ion-col>
 
@@ -109,7 +109,7 @@
                                 {{ teamData.name }}
                             </ion-col>
 
-                            <ion-col text-center>
+                            <ion-col text-center class="start">
                                 <ion-note class="items">{{ match.start }}</ion-note>
                             </ion-col>
 
