--- a/src/pages/participant/participant.html
+++ b/src/pages/participant/participant.html
@@ -17,10 +17,10 @@
 </ion-header>
 
 <ion-content>
+    <!-- Refresh the current page -->
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-
     <!-- Display the detail for the tournament's participant -->
     <div *ngFor="let tournament of participantData.tournament">
         <!-- Display the tournament name -->
