--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -11,10 +11,10 @@
 </ion-header>
 
 <ion-content>
+    <!-- Refresh the current page -->
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-
     <div *ngFor="let tournament of teamData.tournament">
         <!-- Display the name of team and display a icon trophy if the team have a status "Vainqueur" -->
         <ion-col width-100>
