--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -17,10 +17,10 @@
 </ion-header>
 
 <ion-content>
+    <!-- Refresh the current page -->
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-
     <!-- Display the type and the place of tournament -->
     <ion-grid text-center class="white-background">
         <ion-row style="flex-wrap: wrap;">
@@ -75,21 +75,20 @@
     <ion-col width-100><h2>Liste des <b>Poules</b> / <b>Eliminations</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
-
-
+            <!-- Add a slider to navigate between pools and eliminations -->
             <ion-slides [options]="{pager:true}">
                 <ion-slide *ngFor="let stage of tournamentData.stages" class="items">
                     <ion-row>
+                        <!-- Display the name of the stage -->
                         <ion-col width-100>
                             <h1>{{stage.name}}</h1>
                         </ion-col>
                     </ion-row>
                     <hr/>
-
                     <ion-list>
                         <!-- When we click on the name of the match -> go to detail pool -->
                         <ion-item *ngFor="let pool of stage.pools" (click)="goToPool(pool)">
-                            <!-- Display the name of group and display the number of match playd on the total of matchs to be played -->
+                            <!-- Display the name of group and display the number of match played on the total of matches to be played -->
                             <ion-row>
                                 <ion-col width-100 no-padding>
                                     {{ pool.name }}
@@ -100,13 +99,7 @@
 
                 </ion-slide>
             </ion-slides>
-
-
-
-
-
         </ion-card-content>
     </ion-card>
-
 </ion-content>
 
