--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -76,7 +76,6 @@
     <ion-card>
         <ion-card-content no-padding>
 
-
             <ion-slides [options]="{pager:true}">
                 <ion-slide *ngFor="let stage of tournamentData.stages" class="items">
                     <ion-row>
@@ -84,6 +83,7 @@
                             <h1>{{stage.name}}</h1>
                         </ion-col>
                     </ion-row>
+
                     <hr/>
 
                     <ion-list>
@@ -91,8 +91,12 @@
                         <ion-item *ngFor="let pool of stage.pools" (click)="goToPool(pool)">
                             <!-- Display the name of group and display the number of match playd on the total of matchs to be played -->
                             <ion-row>
-                                <ion-col width-100 no-padding>
+                                <ion-col width-50 no-padding>
                                     {{ pool.name }}
+                                </ion-col>
+
+                                <ion-col width-50 text-right no-padding>
+                                    <ion-note>{{pool.playedMatchs}} / {{pool.totalMatchs}}</ion-note>
                                 </ion-col>
                             </ion-row>
                         </ion-item>
@@ -100,10 +104,6 @@
 
                 </ion-slide>
             </ion-slides>
-
-
-
-
 
         </ion-card-content>
     </ion-card>
