--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -10,7 +10,7 @@
     </ion-navbar>
     <!-- Filter events -->
     <ion-toolbar no-border-top>
-        <ion-searchbar color="primary" placeholder="Nom de l'évènement.." [(ngModel)]="searchTerm" (ionInput)="filterEvents()">
+        <ion-searchbar color="primary" placeholder="Nom de l'évènement.." [(ngModel)]="_searchTerm" (ionInput)="filterEvents()">
         </ion-searchbar>
     </ion-toolbar>
 </ion-header>
@@ -21,8 +21,8 @@
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
     <ion-list>
-        <!-- When we click on the name of the event -> go to detail event -->
-        <button ion-item *ngFor="let event of filteredEvents" (click)="goToEvent(event)">
+        <!-- When we click on the name of the _event -> go to detail _event -->
+        <button ion-item *ngFor="let event of _filteredEvents" (click)="goToEvent(event)">
             <div class="items">{{event.name}}</div><!-- Display the name events -->
         </button>
     </ion-list>
