--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -9,9 +9,9 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <!-- Display the name of tournament -->
+        <!-- Display the name of _tournament -->
         <ion-title>
-            {{ tournamentData.name }}
+            {{ _tournamentData.name }}
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -21,16 +21,16 @@
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-    <!-- Display the type and the place of tournament -->
+    <!-- Display the type and the place of _tournament -->
     <ion-grid text-center class="white-background">
         <ion-row style="flex-wrap: wrap;">
             <ion-col width-50>
                 <ion-icon name="grid" class="info"></ion-icon><br/>
-                <div class="items">{{ tournamentData.type }}</div>
+                <div class="items">{{ _tournamentData.type }}</div>
             </ion-col>
             <ion-col width-50>
                 <ion-icon name="pin" class="info"></ion-icon><br/>
-                <div class="items">{{ tournamentData.place }}</div>
+                <div class="items">{{ _tournamentData.place }}</div>
             </ion-col>
         </ion-row>
     </ion-grid>
@@ -39,7 +39,7 @@
         <ion-card-content no-padding>
             <ion-list>
                 <!-- When we click on the name of the team -> go to detail team -->
-                <ion-item *ngFor="let team of tournamentData.teams" (click)="goToTeam(team)">
+                <ion-item *ngFor="let team of _tournamentData.teams" (click)="goToTeam(team)">
                     <!-- Display the name of team -->
                     <div class="items">{{ team.name }}</div>
                 </ion-item>
@@ -55,18 +55,18 @@
                 <ion-item no-padding>
                     <ion-row class="results">
                         <ion-col width-20><strong>1</strong></ion-col>
-                        <ion-col width-80 class="items" *ngIf="tournamentData.winner" (click)="goToTeam(tournamentData.winner)">{{tournamentData.winner.name}}</ion-col>
-                        <ion-col width-80 class="items" *ngIf="!tournamentData.winner">En cours</ion-col>
+                        <ion-col width-80 class="items" *ngIf="_tournamentData.winner" (click)="goToTeam(_tournamentData.winner)">{{_tournamentData.winner.name}}</ion-col>
+                        <ion-col width-80 class="items" *ngIf="!_tournamentData.winner">En cours</ion-col>
                     </ion-row>
                     <ion-row class="results">
                         <ion-col width-20><strong>2</strong></ion-col>
-                        <ion-col width-80 class="items" *ngIf="tournamentData.second" (click)="goToTeam(tournamentData.second)">{{tournamentData.second.name}}</ion-col>
-                        <ion-col width-80 class="items" *ngIf="!tournamentData.second">En cours</ion-col>
+                        <ion-col width-80 class="items" *ngIf="_tournamentData.second" (click)="goToTeam(_tournamentData.second)">{{_tournamentData.second.name}}</ion-col>
+                        <ion-col width-80 class="items" *ngIf="!_tournamentData.second">En cours</ion-col>
                     </ion-row>
                     <ion-row class="results">
                         <ion-col width-20><strong>3</strong></ion-col>
-                        <ion-col width-80 class="items" *ngIf="tournamentData.third" (click)="goToTeam(tournamentData.third)">{{tournamentData.third.name}}</ion-col>
-                        <ion-col width-80 class="items" *ngIf="!tournamentData.third">En cours</ion-col>
+                        <ion-col width-80 class="items" *ngIf="_tournamentData.third" (click)="goToTeam(_tournamentData.third)">{{_tournamentData.third.name}}</ion-col>
+                        <ion-col width-80 class="items" *ngIf="!_tournamentData.third">En cours</ion-col>
                     </ion-row>
                 </ion-item>
             </ion-list>
@@ -78,7 +78,7 @@
 
             <!-- Add a slider to navigate between pools and eliminations -->
             <ion-slides [options]="{pager:true}">
-                <ion-slide *ngFor="let stage of tournamentData.stages" class="items">
+                <ion-slide *ngFor="let stage of _tournamentData.stages" class="items">
                     <ion-row>
                         <!-- Display the name of the stage -->
                         <ion-col width-100>
@@ -88,7 +88,7 @@
 
                     <hr/>
                     <ion-list>
-                        <!-- When we click on the name of the match -> go to detail pool -->
+                        <!-- When we click on the name of the match -> go to detail _pool -->
                         <ion-item *ngFor="let pool of stage.pools" (click)="goToPool(pool)">
                             <!-- Display the name of group and display the number of match played on the total of matches to be played -->
                             <ion-row>
