--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -5,15 +5,15 @@
   Ionic pages and navigation.
 -->
 <ion-header >
-    <!-- Display the event name -->
+    <!-- Display the _event name -->
     <ion-navbar no-border-bottom>
         <ion-title>
-            {{ event.name }}
+            {{ _event.name }}
         </ion-title>
     </ion-navbar>
-    <!-- Content de different segments for a event - Display the toolbar -->
+    <!-- Content de different segments for a _event - Display the toolbar -->
     <ion-toolbar no-border-top>
-        <ion-segment [(ngModel)]="eventContent">
+        <ion-segment [(ngModel)]="_eventContent">
             <ion-segment-button value="teams" (click)="setSegment('teams')">
                 Équipes
             </ion-segment-button>
@@ -36,15 +36,15 @@
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
     <!-- Display the content according to the toolbar -->
-    <div [ngSwitch]="eventContent">
+    <div [ngSwitch]="_eventContent">
         <ion-list *ngSwitchCase="'teams'">
             <!-- Filter teams and display the list teams -->
             <ion-toolbar no-border-top>
-                <ion-searchbar color="primary" placeholder="Nom de l'équipe" [(ngModel)]="searchTermTeam" (ionInput)="filterTeams()">
+                <ion-searchbar color="primary" placeholder="Nom de l'équipe" [(ngModel)]="_searchTermTeam" (ionInput)="filterTeams()">
                 </ion-searchbar>
             </ion-toolbar>
             <!-- When we click on the name of the team -> go to detail team -->
-            <ion-item *ngFor="let team of filteredTeams">
+            <ion-item *ngFor="let team of _filteredTeams">
                 <div class="items" (click)="goToTeam(team)">{{team.name}} ({{team.sport}})</div>
                 <ion-icon item-right name="star" class="color-star" (click)="toggleFavoriteTeam(team)" *ngIf="team.favorite"></ion-icon><!-- When we click on the star -> add the team in favorite -->
                 <ion-icon item-right name="star-outline" (click)="toggleFavoriteTeam(team)" *ngIf="!team.favorite"></ion-icon><!-- When we click on the star -> remove the team in favorite -->
@@ -52,8 +52,8 @@
         </ion-list>
         <!-- Display the list tournaments -->
         <ion-list *ngSwitchCase="'tournaments'">
-            <!-- When we click on the name of the tournament -> go to detail tournament -->
-            <ion-item *ngFor="let tournament of tournaments">
+            <!-- When we click on the name of the _tournament -> go to detail _tournament -->
+            <ion-item *ngFor="let tournament of _tournaments">
                 <div class="items" (click)="goToTournament(tournament)">{{tournament.name}}</div>
             </ion-item>
         </ion-list>
@@ -61,19 +61,19 @@
         <ion-list *ngSwitchCase="'participants'">
             <!-- Filter participant and display the list participants -->
             <ion-toolbar no-border-top>
-                <ion-searchbar color="primary" placeholder="Nom du participant" [(ngModel)]="searchTermParticipant" (ionInput)="filterParticipants()">
+                <ion-searchbar color="primary" placeholder="Nom du participant" [(ngModel)]="_searchTermParticipant" (ionInput)="filterParticipants()">
                 </ion-searchbar>
             </ion-toolbar>
-            <!-- When we click on the name of the participant-> go to detail participant -->
-            <ion-item *ngFor="let participant of filteredParticipants">
+            <!-- When we click on the name of the _participant-> go to detail _participant -->
+            <ion-item *ngFor="let participant of _filteredParticipants">
                 <div class="items" (click)="goToParticipant(participant)">{{participant.lastname}} {{participant.firstname}}</div>
             </ion-item>
         </ion-list>
         <!-- Display the list results -->
         <ion-item-group *ngSwitchCase="'results'">
-            <!-- Display the ranking for each tournament -->
-            <div *ngFor="let tournament of tournaments">
-                <!-- When we click on the name of the tournament -> go to detail tournament -->
+            <!-- Display the ranking for each _tournament -->
+            <div *ngFor="let tournament of _tournaments">
+                <!-- When we click on the name of the _tournament -> go to detail _tournament -->
                 <ion-item-divider class="tournament-name items" (click)="goToTournament(tournament)"><b>{{tournament.name}}</b></ion-item-divider>
                 <!-- Display "En cours" if there is no winner -->
                 <!-- When we click on the name of the team -> go to detail team -->
