--- a/src/pages/participant/participant.html
+++ b/src/pages/participant/participant.html
@@ -11,7 +11,7 @@
         </button>
         <!-- Display the last name and first name -->
         <ion-title>
-            {{ participantData.lastname }} {{ participantData.firstname }}
+            {{ _participantData.lastname }} {{ _participantData.firstname }}
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -21,15 +21,15 @@
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-    <!-- Display the detail for the tournament's participant -->
-    <div *ngFor="let tournament of participantData.tournament">
-        <!-- Display the tournament name -->
+    <!-- Display the detail for the _tournament's participant -->
+    <div *ngFor="let tournament of _participantData.tournament">
+        <!-- Display the _tournament name -->
         <ion-col width-100><h2>Participe à <b>{{ tournament.name }}</b></h2></ion-col>
-        <!-- Display different content if the tournament is not "Marche"-->
+        <!-- Display different content if the _tournament is not "Marche"-->
         <ion-col *ngIf="tournament.sport != 'Marche'" width-100 no-padding>
             <div style="font-weight: 100; margin-left:11px;">Cliquez pour plus de détails</div>
         </ion-col>
-        <!-- When we click on the tournament -> go to detail tournament -->
+        <!-- When we click on the _tournament -> go to detail _tournament -->
         <ion-card *ngIf="tournament.sport != 'Marche'" (click)="goToTournament(tournament)">
             <ion-card-content no-padding>
                 <ion-grid text-center>
@@ -71,11 +71,11 @@
         </ion-card>
     </div>
     <!-- Display the detail for the team's participant -->
-    <div *ngFor="let team of participantData.team">
+    <div *ngFor="let team of _participantData.team">
         <!-- Display the name of team and display a icon trophy if the team have a status "Vainqueur" -->
         <ion-col width-100>
-            <h2>Equipe <b>{{ teamData.name }}</b>
-                <ion-icon name="trophy" class="color-star" *ngIf="teamData.status == 'Vainqueur'"></ion-icon>
+            <h2>Equipe <b>{{ _teamData.name }}</b>
+                <ion-icon name="trophy" class="color-star" *ngIf="_teamData.status == 'Vainqueur'"></ion-icon>
             </h2>
         </ion-col>
         <!-- Display the name of members -->
@@ -83,14 +83,14 @@
             <ion-card-content no-padding>
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
-                        <ion-col width-33 *ngFor="let member of teamData.members">
+                        <ion-col width-33 *ngFor="let member of _teamData.members">
                             <span class="items">{{ member.firstname }}</span>
                         </ion-col>
                     </ion-row>
                 </ion-grid>
             </ion-card-content>
         </ion-card>
-        <!-- Display the name of tournament -->
+        <!-- Display the name of _tournament -->
         <ion-col width-100 class="no-padding-bottom"><h2>Liste des <b>Matchs</b></h2></ion-col>
         <ion-col width-100 no-padding>
             <div style="font-weight: 100; margin-left:11px;">Cliquez pour plus de détails</div>
@@ -98,12 +98,12 @@
         <ion-card>
             <ion-card-content no-padding>
                 <ion-list >
-                    <!-- When we click on the name of the match -> go to detail pool -->
-                    <ion-item *ngFor="let match of teamData.matches" (click)="goToPool(match.group_match_id)">
+                    <!-- When we click on the name of the match -> go to detail _pool -->
+                    <ion-item *ngFor="let match of _teamData.matches" (click)="goToPool(match.group_match_id)">
                         <!-- Display a border green if the team win and display the score -->
                         <ion-row class="border-win" *ngIf="match.ownScore > match.team2Score">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center>
@@ -117,7 +117,7 @@
                         <!-- Display a border red if the team lose and display the score -->
                         <ion-row class="border-lose" *ngIf="match.ownScore < match.team2Score">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center>
@@ -131,7 +131,7 @@
                         <!-- Display a border orange if teams have tied and display the score -->
                         <ion-row class="border-draw" *ngIf="(match.team1Score == match.team2Score) && (match.start == '')">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center>
@@ -145,7 +145,7 @@
                         <!-- Display a border grey if the match didn't begin -->
                         <ion-row class="border-inc" *ngIf="match.status == 'A venir' ">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center>
