--- a/src/pages/pool/pool.html
+++ b/src/pages/pool/pool.html
@@ -9,9 +9,9 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <!-- Display the name of tournament and the name of pool -->
+        <!-- Display the name of _tournament and the name of _pool -->
         <ion-title>
-            {{ tournament.name }} - {{ poolData.name }}
+            {{ _tournament.name }} - {{ _poolData.name }}
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -21,18 +21,18 @@
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-    <!-- Display the type of pool et the place of tournament -->
+    <!-- Display the type of _pool et the place of _tournament -->
     <ion-grid text-center class="white-background">
         <ion-row style="flex-wrap: wrap;">
             <ion-col width-50>
                 <ion-icon name="grid" class="info"></ion-icon>
                 <br/>
-                <div class="items">{{ poolData.type }}</div>
+                <div class="items">{{ _poolData.type }}</div>
             </ion-col>
             <ion-col width-50>
                 <ion-icon name="pin" class="info"></ion-icon>
                 <br/>
-                <div class="items">{{ tournament.place }}</div>
+                <div class="items">{{ _tournament.place }}</div>
             </ion-col>
         </ion-row>
     </ion-grid>
@@ -41,8 +41,8 @@
     <ion-card>
         <ion-card-content no-padding>
             <ion-list id="list-match">
-                <ion-item no-padding *ngFor="let match of poolData.matches">
-                    <ion-row *ngIf="poolData.type == 'Elimination' ">
+                <ion-item no-padding *ngFor="let match of _poolData.matches">
+                    <ion-row *ngIf="_poolData.type == 'Elimination' ">
                         <ion-col width-100 class="items pool-name" text-center>
                             {{ match.name }}
                         </ion-col>
@@ -65,13 +65,13 @@
             </ion-list>
         </ion-card-content>
     </ion-card>
-    <!-- Display different text if the tournament is finished or not -->
-    <ion-col *ngIf="finish" width-100><h2>Le <b>Classement final</b></h2></ion-col>
-    <ion-col *ngIf="!finish" width-100><h2>Le <b>Classement actuel</b></h2></ion-col>
+    <!-- Display different text if the _tournament is finished or not -->
+    <ion-col *ngIf="_finish" width-100><h2>Le <b>Classement final</b></h2></ion-col>
+    <ion-col *ngIf="!_finish" width-100><h2>Le <b>Classement actuel</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding padding-top padding-bottom>
             <!-- Display the information for elimination -->
-            <ion-list *ngIf="poolData.type == 'Elimination' ">
+            <ion-list *ngIf="_poolData.type == 'Elimination' ">
                 <ion-row class="border-table results-head">
                     <ion-col width-20>
                         <strong>#</strong>
@@ -81,9 +81,9 @@
                     </ion-col>
                 </ion-row>
                 <!-- Display the classmate -->
-                <ion-item *ngIf="finish">
+                <ion-item *ngIf="_finish">
                     <ion-row class="results" (click)="goToTeam(team)"
-                             *ngFor="let team of poolData.teams; let i = index;">
+                             *ngFor="let team of _poolData.teams; let i = index;">
                         <ion-col width-20>
                             <strong>{{ i+1 }}</strong>
                         </ion-col>
@@ -93,7 +93,7 @@
                     </ion-row>
                 </ion-item>
                 <!-- Display nothing if no matches are finished -->
-                <ion-item *ngIf="!finish">
+                <ion-item *ngIf="!_finish">
                     <ion-row class="results" >
                         <ion-col width-20>
 
@@ -104,8 +104,8 @@
                     </ion-row>
                 </ion-item>
             </ion-list>
-            <!-- Display the information for pool-->
-            <ion-list *ngIf="poolData.type == 'Poule' ">
+            <!-- Display the information for _pool-->
+            <ion-list *ngIf="_poolData.type == 'Poule' ">
                 <ion-row class="border-table results-head">
                     <ion-col width-10>
                         <strong>#</strong>
@@ -126,8 +126,8 @@
                         <strong>+/-</strong>
                     </ion-col>
                 </ion-row>
-                <!-- Display the classmate for pool-->
-                <ion-row class="results" (click)="goToTeam(team)" *ngFor="let team of poolData.teams; let i = index;">
+                <!-- Display the classmate for _pool-->
+                <ion-row class="results" (click)="goToTeam(team)" *ngFor="let team of _poolData.teams; let i = index;">
                     <ion-col width-10>
                         <strong>{{ i+1 }}</strong>
                     </ion-col>
