--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -3,9 +3,9 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <!-- Display the name of event -->
+        <!-- Display the name of _event -->
         <ion-title>
-            {{ event.name }}
+            {{ _event.name }}
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -15,11 +15,11 @@
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-    <div *ngFor="let tournament of teamData.tournament">
+    <div *ngFor="let tournament of _teamData.tournament">
         <!-- Display the name of team and display a icon trophy if the team have a status "Vainqueur" -->
         <ion-col width-100>
-            <h2>Equipe <b>{{ teamData.name }}</b>
-                <ion-icon name="trophy" class="color-star" *ngIf="teamData.status == 'Vainqueur'"></ion-icon>
+            <h2>Equipe <b>{{ _teamData.name }}</b>
+                <ion-icon name="trophy" class="color-star" *ngIf="_teamData.status == 'Vainqueur'"></ion-icon>
             </h2>
         </ion-col>
         <!-- Display the name of participants -->
@@ -27,7 +27,7 @@
             <ion-card-content no-padding>
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
-                        <ion-col width-33 *ngFor="let member of teamData.members">
+                        <ion-col width-33 *ngFor="let member of _teamData.members">
                             <span class="items">{{ member.firstname }}</span>
                         </ion-col>
                     </ion-row>
@@ -44,8 +44,8 @@
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
                         <ion-col width-50>
-                            <ion-img src="assets/sports/{{ setIconSports(teamData.sport) }}" width="35" height="35" class="sports-img"></ion-img>
-                            <div class="items sports-label">{{ teamData.sport }}</div>
+                            <ion-img src="assets/sports/{{ setIconSports(_teamData.sport) }}" width="35" height="35" class="sports-img"></ion-img>
+                            <div class="items sports-label">{{ _teamData.sport }}</div>
                         </ion-col>
                         <ion-col width-50>
                             <ion-icon name="pin" class="info"></ion-icon>
@@ -64,11 +64,11 @@
             <ion-card-content no-padding>
                 <ion-list >
                     <!-- When we click on the name of the match -> go to detail pool -->
-                    <ion-item *ngFor="let match of teamData.matches" (click)="goToPool(tournament, match.group_match_id)">
+                    <ion-item *ngFor="let match of _teamData.matches" (click)="goToPool(tournament, match.group_match_id)">
                         <!-- Display a border green if the team win and display the score -->
                         <ion-row class="border-win" *ngIf="match.ownScore > match.team2Score">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center class="score">
@@ -82,7 +82,7 @@
                         <!-- Display a border red if the team lose and display the score -->
                         <ion-row class="border-lose" *ngIf="match.ownScore < match.team2Score">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center>
@@ -96,7 +96,7 @@
                         <!-- Display a border orange if teams have tied and display the score -->
                         <ion-row class="border-draw" *ngIf="(match.team1Score == match.team2Score) && (match.start == '')">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center>
@@ -110,7 +110,7 @@
                         <!-- Display a border grey if the match didn't begin -->
                         <ion-row class="border-inc" *ngIf="match.status == 'A venir' ">
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ _teamData.name }}
                             </ion-col>
 
                             <ion-col text-center class="start">
